--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: pcr
-Title: Processing quantitative PCR data
+Title: Processing and analysing quantitative PCR data
 Version: 0.0.0.9000
 Authors@R: person("Mahmoud", "Ahmded",
   email = "mahmoud.s.fahmy@students.kasralainy.edu.eg",
   role = c("aut", "cre"))
 Description: Provides a number of methods for processing and analyzing data 
-  from quantitative PCR experiments
+  from quantitative PCR experiments.
 Depends: R (>= 3.4.2)
-License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: magrittr,
+Imports: devtools,
+  magrittr,
   dplyr,
   tidyr,
   readr
@@ -20,3 +20,4 @@ Suggests: testthat,
     rmarkdown,
     covr
 VignetteBuilder: knitr
+License: GPL-3 + file LICENSE
