started standard_curve and rearrange asses and analyze

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export(pcr_analyze)
 export(pcr_assess)
 export(pcr_ave)
 export(pcr_calib)
-export(pcr_caliberate)
 export(pcr_error)
 export(pcr_norm)
 export(pcr_sd)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -18,5 +18,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise_all)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(stats,coefficients)
+importFrom(stats,lm)
 importFrom(stats,sd)
 importFrom(tidyr,gather)
