--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,10 @@ export(pcr_error)
 export(pcr_normalize)
 export(pcr_sd)
 export(pcr_standard)
+export(pcr_test)
 export(pcr_trend)
 import(ggplot2)
+importFrom(broom,tidy)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
@@ -35,5 +37,7 @@ importFrom(stats,coefficients)
 importFrom(stats,cor)
 importFrom(stats,lm)
 importFrom(stats,sd)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
