--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,10 @@ importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
 importFrom(stats,coefficients)
+importFrom(stats,confint)
 importFrom(stats,cor)
 importFrom(stats,lm)
+importFrom(stats,relevel)
 importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
