--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,12 @@ export(pcr_amount)
 export(pcr_analyze)
 export(pcr_assess)
 export(pcr_average)
-export(pcr_caliberate)
+export(pcr_calibrate)
 export(pcr_curve)
 export(pcr_cv)
 export(pcr_dct)
 export(pcr_ddct)
-export(pcr_effeciency)
+export(pcr_efficiency)
 export(pcr_error)
 export(pcr_normalize)
 export(pcr_sd)
