added using model matrix to pcr_test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(stats,coefficients)
 importFrom(stats,confint)
 importFrom(stats,cor)
 importFrom(stats,lm)
+importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(stats,sd)
 importFrom(stats,t.test)
