--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: pcr
-Title: Processing and analyzing quantitative PCR data
 Version: 0.0.0.9000
+Title: Analyzing real-time quantitative PCR data
+Description: Quality assessing, analyzing and testing the statistical significance of real-time quantitative PCR data.
 Authors@R: person("Mahmoud", "Ahmded",
   email = "mahmoud.s.fahmy@students.kasralainy.edu.eg",
   role = c("aut", "cre"))
-Description: Provides a number of methods for processing and analyzing data 
-  from quantitative PCR experiments.
+URL: https://github.com/MahShaaban/pcr
+BugReports: https://github.com/MahShaaban/pcr/issues
 Depends: R (>= 3.4.2)
 Encoding: UTF-8
 LazyData: true
