modify travis to pass the svg error

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: false
 cache: packages
 r_packages:
   - covr
-
+before_install:
+    - tlmgr install svg
 after_success:
   - Rscript -e 'library(covr); codecov()'
