changes for a cran note

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(pcr_ddct)
 export(pcr_efficiency)
 export(pcr_standard)
 export(pcr_test)
-import(ggplot2)
 importFrom(broom,tidy)
+importFrom(devtools,install_github)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
@@ -23,8 +23,15 @@ importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_smooth)
+importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
+importFrom(readr,read_csv)
 importFrom(stats,coefficients)
 importFrom(stats,confint)
 importFrom(stats,cor)
