--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Description: Quality assessing, analyzing and testing the statistical significan
 Authors@R: person("Mahmoud", "Ahmded",
   email = "mahmoud.s.fahmy@students.kasralainy.edu.eg",
   role = c("aut", "cre"))
-Maintainer: ‘Mahmoud Ahmded <mahmoud.s.fahmy@students.kasralainy.edu.eg>’
+Maintainer: Mahmoud Ahmded <mahmoud.s.fahmy@students.kasralainy.edu.eg>
 URL: https://github.com/MahShaaban/pcr
 BugReports: https://github.com/MahShaaban/pcr/issues
 Depends: R (>= 3.4.2)
