--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: pcr
 Version: 1.0.0
 Title: Analyzing Real-Time Quantitative PCR Data
 Description: Calculates the amplification efficiency and curves from real-time 
-  quntitative PCR (Polymerase Chain Reaction) data. Estimates the relative 
-  experssion from PCR data using the double delta CT and the statndard curve 
+  quantitative PCR (Polymerase Chain Reaction) data. Estimates the relative 
+  expression from PCR data using the double delta CT and the standard curve 
   methods Livak & Schmittgen (2001) <doi:10.1006/meth.2001.1262>. Tests for 
   statistical significance using two-group tests and linear regression 
   Yuan et al. (2006) <doi: 10.1186/1471-2105-7-85>.
