added pcr_plot and ignore vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(pcr_curve)
 export(pcr_dct)
 export(pcr_ddct)
 export(pcr_efficiency)
+export(pcr_plot)
 export(pcr_standard)
 export(pcr_test)
 importFrom(broom,tidy)
@@ -24,7 +25,9 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_smooth)
