factored pcr_test and pcr_assess

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,13 @@ export(pcr_curve)
 export(pcr_dct)
 export(pcr_ddct)
 export(pcr_efficiency)
-export(pcr_plot)
+export(pcr_lm)
+export(pcr_plot_analyze)
+export(pcr_plot_assess)
 export(pcr_standard)
 export(pcr_test)
+export(pcr_ttest)
+export(pcr_wilcox)
 importFrom(broom,tidy)
 importFrom(devtools,install_github)
 importFrom(dplyr,bind_cols)
@@ -39,7 +43,6 @@ importFrom(stats,coefficients)
 importFrom(stats,confint)
 importFrom(stats,cor)
 importFrom(stats,lm)
-importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(stats,sd)
 importFrom(stats,t.test)
