--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,14 @@ export(pcr_curve)
 export(pcr_dct)
 export(pcr_ddct)
 export(pcr_efficiency)
+export(pcr_genorm)
 export(pcr_lm)
+export(pcr_nf)
 export(pcr_standard)
 export(pcr_test)
 export(pcr_ttest)
 export(pcr_wilcox)
+importFrom(FSA,geomean)
 importFrom(devtools,install_github)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
