--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,16 +15,9 @@ importFrom(devtools,install_github)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
-importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_if)
-importFrom(dplyr,select)
-importFrom(dplyr,starts_with)
-importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_all)
-importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
@@ -36,6 +29,7 @@ importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
 importFrom(readr,read_csv)
+importFrom(stats,aggregate)
 importFrom(stats,coefficients)
 importFrom(stats,confint)
 importFrom(stats,cor)
@@ -45,4 +39,3 @@ importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
 importFrom(tidyr,gather)
-importFrom(tidyr,spread)
