--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: pcr
-Version: 1.1.2
+Version: 1.2.0
 Title: Analyzing Real-Time Quantitative PCR Data
 Description: Calculates the amplification efficiency and curves from real-time 
   quantitative PCR (Polymerase Chain Reaction) data. Estimates the relative 
@@ -17,13 +17,7 @@ Depends: R (>= 3.4.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: devtools,
-  magrittr,
-  dplyr,
-  tidyr,
-  purrr,
-  readr,
-  ggplot2
+Imports: ggplot2
 Suggests: testthat,
     knitr,
     rmarkdown,
